--- a/document-structure/todo/task.html
+++ b/document-structure/todo/task.html
@@ -14,7 +14,9 @@
             <input type="text" class="tasks__input" id="task__input" placeholder="Введите название новой задачи">
             <button class="tasks__add" id="tasks__add">Добавить</button>
         </form>
-        <div class="tasks__list" id="tasks__list"></div>
+        <div class="tasks__list" id="tasks__list">
+            
+        </div>
     </div>
     <script src="task.js"></script>
 </body>
