--- a/async-requests/poll/task.html
+++ b/async-requests/poll/task.html
@@ -14,18 +14,12 @@
             <!--   Как вы относитесь к собакам? -->
         </div>
         <div class="poll__answers poll__answers_active" id="poll__answers">
-            <!-- <button class="poll__answer">
-              Хорошо
-            </button>
-            <button class="poll__answer">
-              Отлично
-            </button>
-            <button class="poll__answer">
-              Я люблю собак
-            </button>
-            <button class="poll__answer">
-              Кто тут?
-            </button> -->
+        </div>
+        <div class="modal">
+          <p class="modal_text">
+            Спасибо, ваш голос засчитан!
+          </p>
+          <a href="#" class="modal_close">&times;</a>
         </div>
     </div>
     <script src="task.js"></script>
