--- a/client-state/auth/task.html
+++ b/client-state/auth/task.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="task.css">
 </head>
 <body>
-    <div class="signin" id="signin">
+    <div class="signin signin_active" id="signin">
         <h2 class="title">Вход</h2>
         <form action="https://netology-slow-rest.herokuapp.com/auth.php" id="signin__form">
             <div class="row">
@@ -25,6 +25,9 @@
     </div>
     <div class="welcome" id="welcome">
         Добро пожаловать, пользователь #<span id="user_id"></span>
+    </div>
+    <div class="irrelevant_values" id="irrelevant_values">
+        Неверный логин или пароль
     </div>
     <script src="task.js"></script>
 </body>
